--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.109.0
 uvicorn==0.27.0
 sqlalchemy==2.0.27
-pydantic==2.6.1
-pydantic-settings==2.2.1
-sqlite==3.41.2
+pydantic
+pydantic-settings
+sqlite
 python-multipart==0.0.9
